view 구현하는 중 navigation drawar customizing

--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,15 +5,10 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".view.SplashActivity">
 
-    <com.google.android.youtube.player.YouTubePlayerView
-            android:id="@+id/player"
-            android:layout_width="match_parent"
-            android:layout_height="300dp">
-
-    </com.google.android.youtube.player.YouTubePlayerView>
-
-
+    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+              android:text="스플래쉬 화면"
+              android:layout_centerInParent="true"/>
 
 </RelativeLayout>
