--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -18,12 +18,21 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@android:color/white"
                 app:popupTheme="@style/AppTheme.PopupOverlay"
-        android:elevation="0.9dp"/>
+                android:elevation="0.9dp">
+            <ImageView
+                    android:id="@+id/main_toolbar_image"
+                    android:layout_width="100dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/liiv_live_logo"
+                    android:layout_gravity="center_horizontal"
+                    android:textSize="18sp"
+                    android:textColor="#000000"/>
+
+        </android.support.v7.widget.Toolbar>
 
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_home"/>
-
 
 
 </android.support.design.widget.CoordinatorLayout>
