--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,57 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+
     <com.google.android.youtube.player.YouTubePlayerView
             android:id="@+id/player"
+
             android:layout_width="match_parent"
-            android:layout_height="300dp">
+            android:background="#000"
+            android:layout_height="wrap_content">
+
 
     </com.google.android.youtube.player.YouTubePlayerView>
 
 
+    <LinearLayout
+            android:layout_below="@+id/player"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+        <Button
+
+                android:text="재생"
+                android:textColor="@android:color/black"
+                android:layout_marginRight="50dp"
+                android:id="@+id/playBtn"
+                android:layout_width="100dp"
+                android:background="@android:color/transparent"
+                android:layout_height="100dp"/>
+
+        <Button
+                android:text="정지"
+                android:textColor="@android:color/black"
+                android:layout_below="@id/playBtn"
+                android:id="@+id/pauseBtn"
+                android:layout_width="100dp"
+                android:background="@android:color/transparent"
+                android:layout_height="100dp"/>
+
+    </LinearLayout>
+
+
+    <!--
+
+       <TextView
+               android:layout_centerHorizontal="true"
+               android:id="@+id/play_time"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content"
+               android:layout_margin="5dp"
+               android:layout_weight="2"
+               android:text="&#45;&#45;:&#45;&#45;"
+               android:textColor="@android:color/white" />
+   -->
 
 </RelativeLayout>
