--- a/app/src/main/res/layout/sliding_layout.xml
+++ b/app/src/main/res/layout/sliding_layout.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:background="@android:color/transparent"
-        android:layout_marginHorizontal="16dp"
+        android:id="@+id/drag_view"
+        android:background="#00000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginHorizontal="16dp"
         android:orientation="vertical">
 
 
     <LinearLayout
+            android:id="@+id/sliding_tops"
             android:background="@drawable/boder_pointree_background"
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
@@ -16,6 +18,7 @@
             android:orientation="vertical">
 
         <ScrollView
+                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -108,6 +111,8 @@
                             android:background="@drawable/border_sliding_top_background">
 
                         <TextView
+                                android:id="@+id/historyBtn"
+                                android:layout_toLeftOf="@+id/history_arrow_btn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textSize="12sp"
@@ -115,12 +120,20 @@
                                 android:lineSpacingExtra="1sp"
                                 android:gravity="end"
                                 android:text="내역 보기"
-                                android:layout_alignParentRight="true"
                                 android:layout_centerVertical="true"
-                                android:layout_marginRight="30dp"
+                                android:layout_marginRight="11dp"
                                 android:fontFamily="@font/nanumsquareregular"
                                 android:includeFontPadding="false"
                         />
+
+                        <ImageView
+                                android:id="@+id/history_arrow_btn"
+                                android:layout_centerVertical="true"
+                                android:layout_marginRight="15dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/main_slide_right_arrow_btn"/>
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -180,6 +193,7 @@
                         android:layout_height="131dp">
 
                     <RelativeLayout
+                            android:id="@+id/pointree_go_btn"
                             android:layout_width="match_parent"
                             android:layout_height="36dp"
                             android:background="@drawable/border_sliding_top_background">
@@ -198,6 +212,15 @@
                                 android:fontFamily="@font/nanumsquareregular"
                                 android:includeFontPadding="false"
                         />
+
+                        <ImageView
+                                android:id="@+id/pointree_arrow_btn"
+                                android:layout_centerVertical="true"
+                                android:layout_marginRight="15dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:src="@drawable/main_slide_right_arrow_btn"/>
 
                     </RelativeLayout>
 
