--- a/app/src/main/res/layout/activity_survey.xml
+++ b/app/src/main/res/layout/activity_survey.xml
@@ -82,6 +82,10 @@
             android:layout_width="match_parent"
             android:layout_height="230dp"/>
 
+    <app.woovictory.liiv_live.util.CircleAnimIndicator
+            android:id="@+id/survey_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
