환전하기, 마이페이지 뷰 완성

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
+            android:textSize="13sp"
             android:layout_height="38dp"
             android:background="@drawable/background_login_id"
     />
@@ -54,6 +55,7 @@
             android:fontFamily="@font/nanumsquareregular"
             android:includeFontPadding="false"
             android:paddingRight="20dp"
+            android:textSize="13sp"
             android:layout_width="match_parent"
             android:layout_height="38dp"
             android:background="@drawable/background_login_id"
