--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".view.home.HomeActivity"
-        app:umanoPanelHeight="213dp"
+        app:umanoPanelHeight="250dp"
         app:umanoParallaxOffset="100dp"
         app:umanoShadowHeight="0dp"
         android:backgroundTint="@android:color/transparent"
@@ -31,7 +31,7 @@
                     android:clipToPadding="false"
             />
 
-            <app.woovictory.liiv_live.util.CircleAnimIndicator
+            <app.woovictory.liiv_live.util.indicator.CircleAnimIndicator
                     android:layout_marginTop="5dp"
                     android:layout_below="@+id/main_viewpager"
                     android:id="@+id/circleAnimIndicator"
