--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="mainColor">#fdbd37</color>
     <color name="greyblue">#58c4c6</color>
+    <color name="backColor">#f6f6f6</color>
+    <color name="white">#FFFFFF</color>
 </resources>
