--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="greyblue">#58c4c6</color>
     <color name="backColor">#f6f6f6</color>
     <color name="white">#FFFFFF</color>
+    <color name="viewColor">#e0e0e0</color>
 </resources>
